--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ Simple driver for TSPL/TSPLv2 compatible thermal label printers
 """
 readme = "README.md"
 keywords = ["ESC", "POS", "printer", "driver", "TSPL"]
+categories = ["hardware-support"]
 repository = "https://github.com/aectaan/tspl2"
 license = "MIT"
 authors = ["Egor Markov <mark_ee@live.com>"]
